parser/team21/Analisis Descendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    AS
    BETWEEN
    BIGINT
    BOOLEAN
    CHARACTER
    CORDER
    CORIZQ
    CUATROPTOS
    DAY
    DEFAULT
    DIFERENTEQ
    DIVISION
    ENUM
    HOUR
    ILIKE
    IN
    INTERVAL
    IS
    LLAVEA
    LLAVEC
    MAS
    MAYORIGUALQ
    MAYORQ
    MENORIGUALQ
    MENORQ
    MINUTE
    MONEY
    MONTH
    NUMERIC
    OUT
    POR
    PORCENTAJE
    PRECISION
    PUNTO
    REAL
    SECOND
    SIMILAR
    SMALLINT
    TEXT
    TIME
    TIMESTAMP
    UMAS
    UMENOSCADENA
    VARYING
    WITH
    WITHOUT
    YEAR
    ZONE

Grammar

Rule 0     S' -> s
Rule 1     s -> instrucciones
Rule 2     instrucciones -> instruccion instruccionesp
Rule 3     instrucciones -> <empty>
Rule 4     instruccionesp -> instruccion instrucciones
Rule 5     instruccionesp -> <empty>
Rule 6     instruccion -> CREATE createp
Rule 7     instruccion -> ALTER DATABASE alterp
Rule 8     instruccion -> DROP DATABASE dropp IDENTIFICADOR
Rule 9     instruccion -> SHOW DATABASES opcional3 PTCOMA
Rule 10    dropp -> IF EXISTS
Rule 11    dropp -> <empty>
Rule 12    alterp -> IDENTIFICADOR alterpp
Rule 13    alterpp -> RENAME TO alterppp
Rule 14    alterpp -> OWNER TO alterppp
Rule 15    alterppp -> IDENTIFICADOR
Rule 16    alterppp -> CURRENT_USER
Rule 17    alterppp -> SESSION_USER
Rule 18    createp -> OR REPLACE DATABASE opcional IDENTIFICADOR opcional PTCOMA
Rule 19    createp -> TYPE createpp
Rule 20    createp -> DATABASE createpp
Rule 21    createp -> TABLE createpp
Rule 22    createpp -> IDENTIFICADOR createtp
Rule 23    createtp -> SHOW
Rule 24    l_campos -> IDENTIFICADOR l_campo l_campos
Rule 25    l_campos -> COMA IDENTIFICADOR l_campo l_campos
Rule 26    l_campos -> <empty>
Rule 27    l_campo -> tipo l_campo
Rule 28    l_campo -> <empty>
Rule 29    tipo -> INTEGER
Rule 30    tipo -> DATE
Rule 31    tipo -> NOT
Rule 32    tipo -> NULL
Rule 33    tipo -> PRIMARY KEY
Rule 34    tipo -> FOREIGN KEY REFERENCES
Rule 35    tipo -> CONSTRAINT
Rule 36    tipo -> UNIQUE
Rule 37    tipo -> IDENTIFICADOR
Rule 38    tipo -> VARCHAR PARIZQ NOENTERO PARDER
Rule 39    tipo -> CHAR PARIZQ NOENTERO PARDER
Rule 40    tipo -> CHECK PARIZQ expresion PARDER
Rule 41    tipo -> DECIMAL PARIZQ NOENTERO COMA NOENTERO PARDER
Rule 42    tipo -> DOUBLE
Rule 43    tipo -> DECIMAL
Rule 44    tipo -> NOENTERO
Rule 45    l_cadenas -> PARIZQ CARACTER_O_CADENA l_cadenasp PARDER
Rule 46    l_cadenasp -> COMA CARACTER_O_CADENA l_cadenasp
Rule 47    l_cadenasp -> <empty>
Rule 48    opcional -> IF NOT EXISTS
Rule 49    opcional -> OWNER opcional1 IDENTIFICADOR opcional2
Rule 50    opcional -> <empty>
Rule 51    opcional1 -> IGUAL
Rule 52    opcional1 -> <empty>
Rule 53    opcional2 -> MODE opcional1 NOENTERO
Rule 54    opcional2 -> <empty>
Rule 55    opcional3 -> LIKE CARACTER_O_CADENA
Rule 56    opcional3 -> <empty>
Rule 57    expresion -> MENOS NOENTERO

Terminals, with rules where they appear

ALTER                : 7
AND                  : 
AS                   : 
BETWEEN              : 
BIGINT               : 
BOOLEAN              : 
CARACTER_O_CADENA    : 45 46 55
CHAR                 : 39
CHARACTER            : 
CHECK                : 40
COMA                 : 25 41 46
CONSTRAINT           : 35
CORDER               : 
CORIZQ               : 
CREATE               : 6
CUATROPTOS           : 
CURRENT_USER         : 16
DATABASE             : 7 8 18 20
DATABASES            : 9
DATE                 : 30
DAY                  : 
DECIMAL              : 41 43
DEFAULT              : 
DIFERENTEQ           : 
DIVISION             : 
DOUBLE               : 42
DROP                 : 8
ENUM                 : 
EXISTS               : 10 48
FOREIGN              : 34
HOUR                 : 
IDENTIFICADOR        : 8 12 15 18 22 24 25 37 49
IF                   : 10 48
IGUAL                : 51
ILIKE                : 
IN                   : 
INTEGER              : 29
INTERVAL             : 
IS                   : 
KEY                  : 33 34
LIKE                 : 55
LLAVEA               : 
LLAVEC               : 
MAS                  : 
MAYORIGUALQ          : 
MAYORQ               : 
MENORIGUALQ          : 
MENORQ               : 
MENOS                : 57
MINUTE               : 
MODE                 : 53
MONEY                : 
MONTH                : 
NOENTERO             : 38 39 41 41 44 53 57
NOT                  : 31 48
NULL                 : 32
NUMERIC              : 
OR                   : 18
OUT                  : 
OWNER                : 14 49
PARDER               : 38 39 40 41 45
PARIZQ               : 38 39 40 41 45
POR                  : 
PORCENTAJE           : 
PRECISION            : 
PRIMARY              : 33
PTCOMA               : 9 18
PUNTO                : 
REAL                 : 
REFERENCES           : 34
RENAME               : 13
REPLACE              : 18
SECOND               : 
SESSION_USER         : 17
SHOW                 : 9 23
SIMILAR              : 
SMALLINT             : 
TABLE                : 21
TEXT                 : 
TIME                 : 
TIMESTAMP            : 
TO                   : 13 14
TYPE                 : 19
UMAS                 : 
UMENOSCADENA         : 
UNIQUE               : 36
VARCHAR              : 38
VARYING              : 
WITH                 : 
WITHOUT              : 
YEAR                 : 
ZONE                 : 
error                : 

Nonterminals, with rules where they appear

alterp               : 7
alterpp              : 12
alterppp             : 13 14
createp              : 6
createpp             : 19 20 21
createtp             : 22
dropp                : 8
expresion            : 40
instruccion          : 2 4
instrucciones        : 1 4
instruccionesp       : 2
l_cadenas            : 
l_cadenasp           : 45 46
l_campo              : 24 25 27
l_campos             : 24 25
opcional             : 18 18
opcional1            : 49 53
opcional2            : 49
opcional3            : 9
s                    : 0
tipo                 : 27

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . instrucciones
    (2) instrucciones -> . instruccion instruccionesp
    (3) instrucciones -> .
    (6) instruccion -> . CREATE createp
    (7) instruccion -> . ALTER DATABASE alterp
    (8) instruccion -> . DROP DATABASE dropp IDENTIFICADOR
    (9) instruccion -> . SHOW DATABASES opcional3 PTCOMA

    $end            reduce using rule 3 (instrucciones -> .)
    CREATE          shift and go to state 4
    ALTER           shift and go to state 5
    DROP            shift and go to state 6
    SHOW            shift and go to state 7

    s                              shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3

state 1

    (0) S' -> s .



state 2

    (1) s -> instrucciones .

    $end            reduce using rule 1 (s -> instrucciones .)


state 3

    (2) instrucciones -> instruccion . instruccionesp
    (4) instruccionesp -> . instruccion instrucciones
    (5) instruccionesp -> .
    (6) instruccion -> . CREATE createp
    (7) instruccion -> . ALTER DATABASE alterp
    (8) instruccion -> . DROP DATABASE dropp IDENTIFICADOR
    (9) instruccion -> . SHOW DATABASES opcional3 PTCOMA

    $end            reduce using rule 5 (instruccionesp -> .)
    CREATE          shift and go to state 4
    ALTER           shift and go to state 5
    DROP            shift and go to state 6
    SHOW            shift and go to state 7

    instruccion                    shift and go to state 8
    instruccionesp                 shift and go to state 9

state 4

    (6) instruccion -> CREATE . createp
    (18) createp -> . OR REPLACE DATABASE opcional IDENTIFICADOR opcional PTCOMA
    (19) createp -> . TYPE createpp
    (20) createp -> . DATABASE createpp
    (21) createp -> . TABLE createpp

    OR              shift and go to state 11
    TYPE            shift and go to state 13
    DATABASE        shift and go to state 12
    TABLE           shift and go to state 14

    createp                        shift and go to state 10

state 5

    (7) instruccion -> ALTER . DATABASE alterp

    DATABASE        shift and go to state 15


state 6

    (8) instruccion -> DROP . DATABASE dropp IDENTIFICADOR

    DATABASE        shift and go to state 16


state 7

    (9) instruccion -> SHOW . DATABASES opcional3 PTCOMA

    DATABASES       shift and go to state 17


state 8

    (4) instruccionesp -> instruccion . instrucciones
    (2) instrucciones -> . instruccion instruccionesp
    (3) instrucciones -> .
    (6) instruccion -> . CREATE createp
    (7) instruccion -> . ALTER DATABASE alterp
    (8) instruccion -> . DROP DATABASE dropp IDENTIFICADOR
    (9) instruccion -> . SHOW DATABASES opcional3 PTCOMA

    $end            reduce using rule 3 (instrucciones -> .)
    CREATE          shift and go to state 4
    ALTER           shift and go to state 5
    DROP            shift and go to state 6
    SHOW            shift and go to state 7

    instruccion                    shift and go to state 3
    instrucciones                  shift and go to state 18

state 9

    (2) instrucciones -> instruccion instruccionesp .

    $end            reduce using rule 2 (instrucciones -> instruccion instruccionesp .)


state 10

    (6) instruccion -> CREATE createp .

    CREATE          reduce using rule 6 (instruccion -> CREATE createp .)
    ALTER           reduce using rule 6 (instruccion -> CREATE createp .)
    DROP            reduce using rule 6 (instruccion -> CREATE createp .)
    SHOW            reduce using rule 6 (instruccion -> CREATE createp .)
    $end            reduce using rule 6 (instruccion -> CREATE createp .)


state 11

    (18) createp -> OR . REPLACE DATABASE opcional IDENTIFICADOR opcional PTCOMA

    REPLACE         shift and go to state 19


state 12

    (20) createp -> DATABASE . createpp
    (22) createpp -> . IDENTIFICADOR createtp

    IDENTIFICADOR   shift and go to state 21

    createpp                       shift and go to state 20

state 13

    (19) createp -> TYPE . createpp
    (22) createpp -> . IDENTIFICADOR createtp

    IDENTIFICADOR   shift and go to state 21

    createpp                       shift and go to state 22

state 14

    (21) createp -> TABLE . createpp
    (22) createpp -> . IDENTIFICADOR createtp

    IDENTIFICADOR   shift and go to state 21

    createpp                       shift and go to state 23

state 15

    (7) instruccion -> ALTER DATABASE . alterp
    (12) alterp -> . IDENTIFICADOR alterpp

    IDENTIFICADOR   shift and go to state 25

    alterp                         shift and go to state 24

state 16

    (8) instruccion -> DROP DATABASE . dropp IDENTIFICADOR
    (10) dropp -> . IF EXISTS
    (11) dropp -> .

    IF              shift and go to state 27
    IDENTIFICADOR   reduce using rule 11 (dropp -> .)

    dropp                          shift and go to state 26

state 17

    (9) instruccion -> SHOW DATABASES . opcional3 PTCOMA
    (55) opcional3 -> . LIKE CARACTER_O_CADENA
    (56) opcional3 -> .

    LIKE            shift and go to state 29
    PTCOMA          reduce using rule 56 (opcional3 -> .)

    opcional3                      shift and go to state 28

state 18

    (4) instruccionesp -> instruccion instrucciones .

    $end            reduce using rule 4 (instruccionesp -> instruccion instrucciones .)


state 19

    (18) createp -> OR REPLACE . DATABASE opcional IDENTIFICADOR opcional PTCOMA

    DATABASE        shift and go to state 30


state 20

    (20) createp -> DATABASE createpp .

    CREATE          reduce using rule 20 (createp -> DATABASE createpp .)
    ALTER           reduce using rule 20 (createp -> DATABASE createpp .)
    DROP            reduce using rule 20 (createp -> DATABASE createpp .)
    SHOW            reduce using rule 20 (createp -> DATABASE createpp .)
    $end            reduce using rule 20 (createp -> DATABASE createpp .)


state 21

    (22) createpp -> IDENTIFICADOR . createtp
    (23) createtp -> . SHOW

    SHOW            shift and go to state 32

    createtp                       shift and go to state 31

state 22

    (19) createp -> TYPE createpp .

    CREATE          reduce using rule 19 (createp -> TYPE createpp .)
    ALTER           reduce using rule 19 (createp -> TYPE createpp .)
    DROP            reduce using rule 19 (createp -> TYPE createpp .)
    SHOW            reduce using rule 19 (createp -> TYPE createpp .)
    $end            reduce using rule 19 (createp -> TYPE createpp .)


state 23

    (21) createp -> TABLE createpp .

    CREATE          reduce using rule 21 (createp -> TABLE createpp .)
    ALTER           reduce using rule 21 (createp -> TABLE createpp .)
    DROP            reduce using rule 21 (createp -> TABLE createpp .)
    SHOW            reduce using rule 21 (createp -> TABLE createpp .)
    $end            reduce using rule 21 (createp -> TABLE createpp .)


state 24

    (7) instruccion -> ALTER DATABASE alterp .

    CREATE          reduce using rule 7 (instruccion -> ALTER DATABASE alterp .)
    ALTER           reduce using rule 7 (instruccion -> ALTER DATABASE alterp .)
    DROP            reduce using rule 7 (instruccion -> ALTER DATABASE alterp .)
    SHOW            reduce using rule 7 (instruccion -> ALTER DATABASE alterp .)
    $end            reduce using rule 7 (instruccion -> ALTER DATABASE alterp .)


state 25

    (12) alterp -> IDENTIFICADOR . alterpp
    (13) alterpp -> . RENAME TO alterppp
    (14) alterpp -> . OWNER TO alterppp

    RENAME          shift and go to state 34
    OWNER           shift and go to state 35

    alterpp                        shift and go to state 33

state 26

    (8) instruccion -> DROP DATABASE dropp . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 36


state 27

    (10) dropp -> IF . EXISTS

    EXISTS          shift and go to state 37


state 28

    (9) instruccion -> SHOW DATABASES opcional3 . PTCOMA

    PTCOMA          shift and go to state 38


state 29

    (55) opcional3 -> LIKE . CARACTER_O_CADENA

    CARACTER_O_CADENA shift and go to state 39


state 30

    (18) createp -> OR REPLACE DATABASE . opcional IDENTIFICADOR opcional PTCOMA
    (48) opcional -> . IF NOT EXISTS
    (49) opcional -> . OWNER opcional1 IDENTIFICADOR opcional2
    (50) opcional -> .

    IF              shift and go to state 41
    OWNER           shift and go to state 42
    IDENTIFICADOR   reduce using rule 50 (opcional -> .)

    opcional                       shift and go to state 40

state 31

    (22) createpp -> IDENTIFICADOR createtp .

    CREATE          reduce using rule 22 (createpp -> IDENTIFICADOR createtp .)
    ALTER           reduce using rule 22 (createpp -> IDENTIFICADOR createtp .)
    DROP            reduce using rule 22 (createpp -> IDENTIFICADOR createtp .)
    SHOW            reduce using rule 22 (createpp -> IDENTIFICADOR createtp .)
    $end            reduce using rule 22 (createpp -> IDENTIFICADOR createtp .)


state 32

    (23) createtp -> SHOW .

    CREATE          reduce using rule 23 (createtp -> SHOW .)
    ALTER           reduce using rule 23 (createtp -> SHOW .)
    DROP            reduce using rule 23 (createtp -> SHOW .)
    SHOW            reduce using rule 23 (createtp -> SHOW .)
    $end            reduce using rule 23 (createtp -> SHOW .)


state 33

    (12) alterp -> IDENTIFICADOR alterpp .

    CREATE          reduce using rule 12 (alterp -> IDENTIFICADOR alterpp .)
    ALTER           reduce using rule 12 (alterp -> IDENTIFICADOR alterpp .)
    DROP            reduce using rule 12 (alterp -> IDENTIFICADOR alterpp .)
    SHOW            reduce using rule 12 (alterp -> IDENTIFICADOR alterpp .)
    $end            reduce using rule 12 (alterp -> IDENTIFICADOR alterpp .)


state 34

    (13) alterpp -> RENAME . TO alterppp

    TO              shift and go to state 43


state 35

    (14) alterpp -> OWNER . TO alterppp

    TO              shift and go to state 44


state 36

    (8) instruccion -> DROP DATABASE dropp IDENTIFICADOR .

    CREATE          reduce using rule 8 (instruccion -> DROP DATABASE dropp IDENTIFICADOR .)
    ALTER           reduce using rule 8 (instruccion -> DROP DATABASE dropp IDENTIFICADOR .)
    DROP            reduce using rule 8 (instruccion -> DROP DATABASE dropp IDENTIFICADOR .)
    SHOW            reduce using rule 8 (instruccion -> DROP DATABASE dropp IDENTIFICADOR .)
    $end            reduce using rule 8 (instruccion -> DROP DATABASE dropp IDENTIFICADOR .)


state 37

    (10) dropp -> IF EXISTS .

    IDENTIFICADOR   reduce using rule 10 (dropp -> IF EXISTS .)


state 38

    (9) instruccion -> SHOW DATABASES opcional3 PTCOMA .

    CREATE          reduce using rule 9 (instruccion -> SHOW DATABASES opcional3 PTCOMA .)
    ALTER           reduce using rule 9 (instruccion -> SHOW DATABASES opcional3 PTCOMA .)
    DROP            reduce using rule 9 (instruccion -> SHOW DATABASES opcional3 PTCOMA .)
    SHOW            reduce using rule 9 (instruccion -> SHOW DATABASES opcional3 PTCOMA .)
    $end            reduce using rule 9 (instruccion -> SHOW DATABASES opcional3 PTCOMA .)


state 39

    (55) opcional3 -> LIKE CARACTER_O_CADENA .

    PTCOMA          reduce using rule 55 (opcional3 -> LIKE CARACTER_O_CADENA .)


state 40

    (18) createp -> OR REPLACE DATABASE opcional . IDENTIFICADOR opcional PTCOMA

    IDENTIFICADOR   shift and go to state 45


state 41

    (48) opcional -> IF . NOT EXISTS

    NOT             shift and go to state 46


state 42

    (49) opcional -> OWNER . opcional1 IDENTIFICADOR opcional2
    (51) opcional1 -> . IGUAL
    (52) opcional1 -> .

    IGUAL           shift and go to state 48
    IDENTIFICADOR   reduce using rule 52 (opcional1 -> .)

    opcional1                      shift and go to state 47

state 43

    (13) alterpp -> RENAME TO . alterppp
    (15) alterppp -> . IDENTIFICADOR
    (16) alterppp -> . CURRENT_USER
    (17) alterppp -> . SESSION_USER

    IDENTIFICADOR   shift and go to state 50
    CURRENT_USER    shift and go to state 51
    SESSION_USER    shift and go to state 52

    alterppp                       shift and go to state 49

state 44

    (14) alterpp -> OWNER TO . alterppp
    (15) alterppp -> . IDENTIFICADOR
    (16) alterppp -> . CURRENT_USER
    (17) alterppp -> . SESSION_USER

    IDENTIFICADOR   shift and go to state 50
    CURRENT_USER    shift and go to state 51
    SESSION_USER    shift and go to state 52

    alterppp                       shift and go to state 53

state 45

    (18) createp -> OR REPLACE DATABASE opcional IDENTIFICADOR . opcional PTCOMA
    (48) opcional -> . IF NOT EXISTS
    (49) opcional -> . OWNER opcional1 IDENTIFICADOR opcional2
    (50) opcional -> .

    IF              shift and go to state 41
    OWNER           shift and go to state 42
    PTCOMA          reduce using rule 50 (opcional -> .)

    opcional                       shift and go to state 54

state 46

    (48) opcional -> IF NOT . EXISTS

    EXISTS          shift and go to state 55


state 47

    (49) opcional -> OWNER opcional1 . IDENTIFICADOR opcional2

    IDENTIFICADOR   shift and go to state 56


state 48

    (51) opcional1 -> IGUAL .

    IDENTIFICADOR   reduce using rule 51 (opcional1 -> IGUAL .)
    NOENTERO        reduce using rule 51 (opcional1 -> IGUAL .)


state 49

    (13) alterpp -> RENAME TO alterppp .

    CREATE          reduce using rule 13 (alterpp -> RENAME TO alterppp .)
    ALTER           reduce using rule 13 (alterpp -> RENAME TO alterppp .)
    DROP            reduce using rule 13 (alterpp -> RENAME TO alterppp .)
    SHOW            reduce using rule 13 (alterpp -> RENAME TO alterppp .)
    $end            reduce using rule 13 (alterpp -> RENAME TO alterppp .)


state 50

    (15) alterppp -> IDENTIFICADOR .
